--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "next": "14.1.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "14.1.3",
+    "framer-motion": "^11.0.8",
+    "postcss": "^8",
+    "react-icons": "^5.0.1",
+    "swiper": "^11.0.7",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
