--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@actions/artifact": "^2.1.4",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
